<resources>
    <string name="app_name">RobotROS</string>
    <string name="sway">转向系数：</string>
    <string name="baseSpeed">基础速度：</string>
    <string name="speedUp">加速</string>
    <string name="speedDown">减速</string>
    <string name="straight">直行</string>
    <string name="direction">行驶方向：</string>
    <string name="drivingMode">速度模式：</string>
    <string name="leftWheel">速度：</string>
    <string name="rightWheel">转向：</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="navigation">导航</string>
    <string name="control_center">控制中心</string>
    <string name="operation">手柄操控</string>
    <string name="click">Click</string>
    <string name="clear">Clear</string>
    <string name="follow">跟随</string>
    <string name="inspection">巡检</string>
    <string name="set_start_position">设置起点和方向</string>
    <string name="set_endpoint">设置终点和方向</string>

    <string name="follow_target">拍摄跟随目标</string>
    <string name="change_target">切换跟随目标</string>
    <string name="stop_follow">停止跟随</string>

    <string name="set_inspection_time">设置巡检时间</string>
    <string name="start_inspection">开始巡检</string>
    <string name="interrupt_inspection">中断巡检</string>
    <string name="stop_inspection">停止巡检</string>
    <string name="set_inspection_point">设置巡检点</string>
</resources>
