<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/joyStickView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/baseInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/direction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"
            android:textSize="22sp"
            android:text="@string/direction"/>

        <TextView
            android:id="@+id/sway"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:text="@string/sway"/>

        <TextView
            android:id="@+id/baseSpeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:text="@string/baseSpeed"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/speedUpDown"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/baseInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/speedUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="26sp"
            android:text="@string/speedUp"/>

        <Button
            android:id="@+id/speedDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="26sp"
            android:text="@string/speedDown"/>

        <TextView
            android:id="@+id/drivingMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:text="@string/drivingMode"/>
    </LinearLayout>

</RelativeLayout>