<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.v4.widget.NestedScrollView-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:orientation="vertical"-->
<!--    >-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.xuershangda.joystick.view.FingerPaintImageView
        android:id="@+id/finger"
        android:layout_width="match_parent"
        android:layout_height="1594.88px"
        android:scaleType="fitXY"
        android:src="@drawable/tianzige"
        app:inEditMode="true"/>

<!--    <Button-->
<!--        android:id="@+id/click"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/click">-->
<!--    </Button>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/set_start_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_start_position">
        </Button>

        <Button
            android:id="@+id/set_endpoint"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_endpoint">
        </Button>

        <Button
            android:id="@+id/clear"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear">
        </Button>
    </LinearLayout>

<!--    <Button-->
<!--        android:id="@+id/follow"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/follow">-->
<!--    </Button>-->

<!--    <Button-->
<!--        android:id="@+id/inspection"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/inspection">-->
<!--    </Button>-->
</LinearLayout>
<!--</android.support.v4.widget.NestedScrollView>-->